fix spacing after image upload button on mobile and tablet

--- a/src/components/FormFile/FormFile.scss
+++ b/src/components/FormFile/FormFile.scss
@@ -6,6 +6,11 @@
 .form-file {
 	display: flex;
 	flex-direction: column;
+	padding-bottom: 1rem;
+
+	@include mixins.desktop {
+		padding-bottom: 0;
+	}
 
 	&__label {
 		@extend .labels-and-buttons;
